--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .Top_Mato{
-  width: 100vw;
+  width: 1280px;
   	vertical-align: bottom;
 }
 .Hommbun{
@@ -15,7 +15,7 @@
   width: 170px;
 }
 nav{
-   width: 100vw;
+   width: 1280px;
   overflow: hidden;
   background: #009786;
   margin-bottom: 30px;
