--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   margin: auto;
   margin-left: 80px;
 }
+.container_nav{
+  width: 1280px;
+  margin: auto;
+  margin-left: 80px;
+}
 
 .Top_Mato{
   width: 100vw;
